Database connected, tested and functioning

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,1 @@
-ATLAS_URI = mongodb+srv://milomacphail:Pandahead7!@cluster0-xmzff.mongodb.net/test?retryWrites=true&w=majority
+ATLAS_URI = mongodb+srv://milomacphail:Pandahead7!@cluster0-xmzff.gcp.mongodb.net/test?retryWrites=true&w=majority
